--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -83,13 +83,13 @@
     <string name="additional_cdma_call_settings">Impostazioni aggiuntive per chiamate CDMA</string>
     <string name="sum_cdma_call_settings">Impostazioni aggiuntive solo per le chiamate CDMA</string>
     <string name="labelCallerId">ID chiamante</string>
-    <string name="sum_loading_settings">Caricameno impostazioni…</string>
+    <string name="sum_loading_settings">Caricamento impostazioni…</string>
     <string name="sum_hide_caller_id">Numero nascosto nelle chiamate uscenti</string>
     <string name="sum_show_caller_id">Numero visibile nelle chiamate uscenti</string>
     <string name="sum_default_caller_id">"Usa l'impostazione predefinita dell'operatore sulla visualizzazione del mio numero quando effettui chiamate"</string>
     <string name="labelCW">Chiamate in attesa</string>
     <string name="sum_cw_enabled">Durante una chiamata, notificami le chiamate in attesa</string>
-    <string name="sum_cw_disabled">Durante una chiamata, notificami le chiamate in attesa</string>
+    <string name="sum_cw_disabled">Durante una chiamata, non notificarmi le chiamate in attesa</string>
     <string name="error_updating_title">Errore impostazioni chiamate</string>
     <string name="reading_settings">Lettura impostazioni…</string>
     <string name="updating_settings">Aggiornamento impostazioni…</string>
@@ -134,15 +134,15 @@ Desideri passare comunque al nuovo servizio?"</string>
     <string name="data_enable_summary">Abilita accesso dati tramite rete mobile</string>
     <string name="roaming">Roaming dati</string>
     <string name="roaming_enable">Connetti ai servizi dati quando sei in roaming</string>
-    <string name="roaming_disable">Connetti ai servizi dati quando sei in roaming</string>
+    <string name="roaming_disable">Non Connettere ai servizi dati quando sei in roaming</string>
     <string name="roaming_reenable_message">Hai perso la connessione perchè non sei più connesso alla rete del tuo operatore e la connessione dati in roaming è disattivata.</string>
-    <string name="roaming_warning">Consentire il roaming dati? Potresti ricever consistenti addebiti per il roaming!</string>
+    <string name="roaming_warning">Consentire il roaming dati? Potresti ricevere consistenti addebiti per il roaming!</string>
     <string name="ussd_dialog_sep">----------</string>
     <string name="always_enable_mms">Ricevi sempre gli MMS</string>
     <string name="always_enable_mms_summary">Ricevi MMS anche quando la connessione dati è disattivata</string>
     <string name="networks_title">Operatori di rete</string>
     <string name="network_settings_warn_message">Usa solo la rete che hai selezionato manualmente</string>
-    <string name="network_settings_auto_select_title">Non slezionare automaticamente le reti</string>
+    <string name="network_settings_auto_select_title">Non selezionare automaticamente le reti</string>
     <string name="network_settings_next">Avanti</string>
     <string name="network_settings_confirm_message">La rete potrebbe non essere disponibile.</string>
     <string name="network_settings_query_failed_message">Interrogazione rete fallita. Tocca Annulla per usare la tua rete preferita o tocca Ok per riprovare.</string>
@@ -315,7 +315,7 @@ La tua carta SIM sarà cancellata se fallisci un altro tentativo.</string>
     <string name="enter_pin2_text">PIN2</string>
     <string name="old_pin2_label">Vecchio PIN2</string>
     <string name="new_pin2_label">Nuovo PIN2</string>
-    <string name="confirm_pin2_label">Confirma il nuovo PIN2</string>
+    <string name="confirm_pin2_label">Conferma il nuovo PIN2</string>
     <string name="bad_puk2">Il PUK2 che hai digitato non è corretto. Riprova.</string>
     <string name="bad_pin2">Il vecchio PIN2 che hai digitato non è corretto. Riprova.</string>
     <string name="mismatch_pin2">I PIN2 che hai digitato non corrispondono. Riprova.</string>
@@ -446,7 +446,7 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="sip_accounts">Account chiamate via internet (SIP)</string>
     <string name="sip_accounts_title">Account SIP</string>
     <string name="sip_receive_calls">Ricezione chiamate entranti</string>
-    <string name="sip_receive_calls_summary">"Riduce la durata della batteria"</string>
+    <string name="sip_receive_calls_summary">Riduce la durata della batteria</string>
     <string name="sip_call_options_title">Usa per chiamate via internet</string>
     <string name="sip_call_options_wifi_only_title">Usa per chiamate via internet (solo Wi-Fi)</string>
     <string name="sip_call_options_entry_1">Per tutte le chiamate quando la rete dati è disponibile</string>
@@ -481,10 +481,10 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="registration_status_no_wifi_data">Registrazione account interrotta per mancanza di connessione Wi-Fi.</string>
     <string name="registration_status_not_running">Registrazione account fallita.</string>
     <string name="registration_status_done">Chiamate in entrata abilitate.</string>
-    <string name="registration_status_failed_try_later">Registrazione account fallita:: (%s); riprova più tardi</string>
-    <string name="registration_status_invalid_credentials">Registrazione account fallita:: nome utente o password errati.</string>
+    <string name="registration_status_failed_try_later">Registrazione account fallita: (%s); riprova più tardi</string>
+    <string name="registration_status_invalid_credentials">Registrazione account fallita: nome utente o password errati.</string>
     <string name="registration_status_server_unreachable">Registrazione account fallita: verifica il nome del server.</string>
-    <string name="third_party_account_summary">"Questo account è attualmente in uso da parte dell'app %s."</string>
+    <string name="third_party_account_summary">Questo account è attualmente in uso da parte dell'app %s.</string>
     <string name="sip_edit_title">Dettagli account SIP</string>
     <string name="sip_edit_new_title">Dettagli account SIP</string>
     <string name="domain_address_title">Server</string>
@@ -493,7 +493,7 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="display_name_title">Nome visualizzato</string>
     <string name="proxy_address_title">"Indirizzo proxy verso l'esterno"</string>
     <string name="port_title">Numero porta</string>
-    <string name="transport_title">Tipom di trasporto</string>
+    <string name="transport_title">Tipo di trasporto</string>
     <string name="send_keepalive_title">Invia keep-alive</string>
     <string name="set_primary_title">Imposta come account principale</string>
     <string name="set_primary_summary">Usato per le chiamate in uscita</string>
@@ -571,7 +571,7 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="ringtone_title">Suoneria telefono</string>
     <string name="vibrate_on_ring_title">Vibra quando suona</string>
     <string name="dtmf_tone_enable_title">Tono tastierino chiamata</string>
-    <string name="dial_pad_autocomplete">Automapletamente tastierino chiamata</string>
+    <string name="dial_pad_autocomplete">Autocompleta tastierino chiamata</string>
     <string name="preference_category_ringtone">Suoneria e vibrazione</string>
     <string name="set_subscription">Seleziona sottoscrizione</string>
     <string name="place_a_call1">Sottoscrizione 1</string>
@@ -769,7 +769,7 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="disable_all_cf">Disabilita tutti gli intoltri di chiamate</string>
     <string name="call_settings_category">Chiamate</string>
     <string name="connect_disconnect_vibrate_title">Vibra su risposta</string>
-    <string name="connect_disconnect_vibrate_summary">"Vibra quando la persona da te chiamata risponde""</string>
+    <string name="connect_disconnect_vibrate_summary">Vibra quando la persona da te chiamata risponde</string>
     <string name="connect_disconnect_vibrate_none">Non vibrare</string>
     <string name="connect_disconnect_vibrate_normal">Normale</string>
     <string name="connect_disconnect_vibrate_weak">Leggera</string>
