Fix credits Miband.apk

--- a/Italian/main/MiBand.apk/res/values-it/strings.xml
+++ b/Italian/main/MiBand.apk/res/values-it/strings.xml
@@ -415,7 +415,7 @@ Media di sonno %5$s, Media sveglio %6$s"</string>
     <string name="setting_feedback_address">Le tue informazioni di contatto (email, numero di telefono or QQ)</string>
     <string name="bluetooth">Bluetooth</string>
     <string name="setting_about_fw">Versione Firmware</string>
-    <string name="setting_about_app">Versione tradotta in italiano da iDDiek</string>
+    <string name="setting_about_app">Versione tradotta in italiano da Miui Italia</string>
     <string name="stop">Fine</string>
     <string name="start">Inizio</string>
     <string name="no_wear_bracelet">La notte scorsa non hai indossato MiBand</string>
